--- a/ref.bib
+++ b/ref.bib
@@ -31,4 +31,11 @@
   journal={www.paper.edu.cn}
 }
 
+@inproceedings{welling2004exponential,
+  title={Exponential family harmoniums with an application to information retrieval},
+  author={Welling, Max and Rosen-Zvi, Michal and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1481--1488},
+  year={2004}
+}
 
