--- a/ref.bib
+++ b/ref.bib
@@ -39,3 +39,24 @@
   year={2004}
 }
 
+@article{hopfield1982neural,
+	title={Neural networks and physical systems with emergent collective computational abilities},
+	author={Hopfield, John J},
+	journal={Proceedings of the national academy of sciences},
+	volume={79},
+	number={8},
+	pages={2554--2558},
+	year={1982},
+	publisher={National Acad Sciences}
+}
+
+@article{hinton2006fast,
+	title={A fast learning algorithm for deep belief nets},
+	author={Hinton, Geoffrey E and Osindero, Simon and Teh, Yee-Whye},
+	journal={Neural computation},
+	volume={18},
+	number={7},
+	pages={1527--1554},
+	year={2006},
+	publisher={MIT Press}
+}
